--- a/Reservia.html
+++ b/Reservia.html
@@ -26,7 +26,7 @@
         <nav>
             <ul>
                 <li class="h">
-                    <a href="#hebergement" id="heberg">Hébergements</a>
+                    <a href="#ancreheber" id="heberg">Hébergements</a>
                 </li>
                 <li class="a">
                     <a href="#activite" id="act">Activités</a>
@@ -72,133 +72,153 @@
                 <p><i class="fas fa-info bleu"></i>Plus de 500 logements sont disponibles dans cette ville</p>
             </article>
         </section>
-        <section class="section1">
+        <section class="section1" id="ancreheber">
             <article class="marseille">
                 <h2 class="titremar">Hébergements à Marseille</h2>
                 <ul class="liste" id="hebergement">
                     <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/cannebiereS.jpg" class="imgheberg"
-                            alt="Image Auberge Cannebiere">
-                        <div class="txtheber">
-                            <h3>Auberge La Cannebière</h3>
-                            <p>Nuit à partir de 25€</p>
-                            <div class="etoile">
-                                <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
-                                    class="fas fa-star bleu"></i><i class="fas fa-star bleu">
-                                </i><i class="fas fa-star gris"></i>
+                        <a href="" class="lienheberg">
+                            <img src="assets/Images/hebergements/4_small/cannebiereS.jpg" class="imgheberg"
+                                alt="Image Auberge Cannebiere">
+                            <div class="txtheber">
+                                <h3>Auberge La Cannebière</h3>
+                                <p>Nuit à partir de 25€</p>
+                                <div class="etoile">
+                                    <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                        class="fas fa-star bleu"></i><i class="fas fa-star bleu">
+                                    </i><i class="fas fa-star gris"></i>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </li>
                     <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/portS.jpg" class="imgheberg"
-                            alt="Image Hôtel Port">
-                        <div class="txtheber">
-                            <h3>Hôtel du port</h3>
-                            <p>Nuit à partir de 52€</p>
-                            <div class="etoile">
-                                <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
-                                    class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
-                                    class="fas fa-star bleu"></i>
+                        <a href="" class="lienheberg">
+                            <img src="assets/Images/hebergements/4_small/portS.jpg" class="imgheberg"
+                                alt="Image Hôtel Port">
+                            <div class="txtheber">
+                                <h3>Hôtel du port</h3>
+                                <p>Nuit à partir de 52€</p>
+                                <div class="etoile">
+                                    <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                        class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                        class="fas fa-star bleu"></i>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </li>
                     <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/mouetteS.jpg" class="imgheberg"
-                            alt="Image Hôtel Mouettes">
-                        <div class="txtheber">
-                            <h3>Hôtel Les mouettes</h3>
-                            <p>Nuit à partir de 76€</p>
-                            <div class="etoile">
-                                <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
-                                    class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
-                                    class="fas fa-star gris"></i>
+                        <a href="" class="lienheberg">
+                            <img src="assets/Images/hebergements/4_small/mouetteS.jpg" class="imgheberg"
+                                alt="Image Hôtel Mouettes">
+                            <div class="txtheber">
+                                <h3>Hôtel Les mouettes</h3>
+                                <p>Nuit à partir de 76€</p>
+                                <div class="etoile">
+                                    <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                        class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                        class="fas fa-star gris"></i>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </li>
                     <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/merS.jpg" class="imgheberg" alt="Image Hôtel Mer">
-
-                        <div class="txtheber">
-                            <h3>Hôtel de la mer</h3>
-                            <p>Nuit à partir de 46€</p>
-                            <div class="etoile">
-                                <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
-                                    class="fas fa-star bleu"></i><i class="fas fa-star gris"></i><i
-                                    class="fas fa-star gris"></i>
+                        <a href="" class="lienheberg">
+                            <img src="assets/Images/hebergements/4_small/merS.jpg" class="imgheberg"
+                                alt="Image Hôtel Mer">
+                            <div class="txtheber">
+                                <h3>Hôtel de la mer</h3>
+                                <p>Nuit à partir de 46€</p>
+                                <div class="etoile">
+                                    <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                        class="fas fa-star bleu"></i><i class="fas fa-star gris"></i><i
+                                        class="fas fa-star gris"></i>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </li>
                     <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/panierS.jpg" class="imgheberg"
-                            alt="Image Auberge Panier">
-                        <div class="txtheber">
-                            <h3>Auberge Le Panier</h3>
-                            <p>Nuit à partir de 23€</p>
-                            <div class="etoile">
-                                <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
-                                    class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
-                                    class="fas fa-star gris"></i>
+                        <a href="" class="lienheberg">
+                            <img src="assets/Images/hebergements/4_small/panierS.jpg" class="imgheberg"
+                                alt="Image Auberge Panier">
+                            <div class="txtheber">
+                                <h3>Auberge Le Panier</h3>
+                                <p>Nuit à partir de 23€</p>
+                                <div class="etoile">
+                                    <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                        class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                        class="fas fa-star gris"></i>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </li>
                     <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/aminaS.jpg" class="imgheberg"
-                            alt="Image Hôtel Amina">
-                        <div class="txtheber">
-                            <h3>Hôtel chez Amina</h3>
-                            <p>Nuit à partir de 96€</p>
-                            <div class="etoile">
-                                <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
-                                    class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
-                                    class="fas fa-star bleu"></i>
+                        <a href="" class="lienheberg">
+                            <img src="assets/Images/hebergements/4_small/aminaS.jpg" class="imgheberg"
+                                alt="Image Hôtel Amina">
+                            <div class="txtheber">
+                                <h3>Hôtel chez Amina</h3>
+                                <p>Nuit à partir de 96€</p>
+                                <div class="etoile">
+                                    <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                        class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                        class="fas fa-star bleu"></i>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </li>
                 </ul>
                 <a href="#" class="affplus">Afficher plus</a>
             </article>
+
             <article class="popu">
                 <a class="titrepop">
                     <h2>Les plus populaires</h2><i class="fas fa-chart-line graph"></i>
                 </a>
                 <ul class="liste" id="populaire">
                     <li class="pop">
-                        <img src="assets/Images/hebergements/4_small/soleildumatinS.jpg" class="imgpop"
-                            alt="Image Hôtel Soleil Matin">
-                        <div class="txtpop">
-                            <h3>Hôtel Le soleil du matin</h3>
-                            <p>Nuit à partir de 128€</p>
-                            <div class="etoile"><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
-                                    class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
-                                    class="fas fa-star bleu"></i>
+                        <a href="" class="lienpop">
+                            <img src="assets/Images/hebergements/4_small/soleildumatinS.jpg" class="imgpop"
+                                alt="Image Hôtel Soleil Matin">
+                            <div class="txtpop">
+                                <h3>Hôtel Le soleil du matin</h3>
+                                <p>Nuit à partir de 128€</p>
+                                <div class="etoile">
+                                    <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                        class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                        class="fas fa-star bleu"></i>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </li>
                     <li class="pop">
-                        <img src="assets/Images/hebergements/4_small/coeurdeleauS.jpg" class="imgpop"
-                            alt="Image Coeur de l'eau Chambre d'hôtes">
-                        <div class="txtpop">
-                            <h3>Au coeur de l'eau Chambres d'hôtes</h3>
-                            <p>Nuit à partir de 71€</p>
-                            <div class="etoile">
-                                <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
-                                    class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
-                                    class="fas fa-star gris"></i>
+                        <a href="" class="lienpop">
+                            <img src="assets/Images/hebergements/4_small/coeurdeleauS.jpg" class="imgpop"
+                                alt="Image Coeur de l'eau Chambre d'hôtes">
+                            <div class="txtpop">
+                                <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                                <p>Nuit à partir de 71€</p>
+                                <div class="etoile">
+                                    <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                        class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                        class="fas fa-star gris"></i>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </li>
                     <li class="pop">
-                        <img src="assets/Images/hebergements/4_small/bleuetblancS.jpg" class="imgpop"
-                            alt="Image Hôtel Bleu et Blanc">
-                        <div class="txtpop">
-                            <h3>Hôtel Tout bleu et Blanc</h3>
-                            <p>Nuit à partir de 68€</p>
-                            <div class="etoile">
-                                <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
-                                    class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
-                                    class="fas fa-star gris"></i>
+                        <a href="" class="lienpop">
+                            <img src="assets/Images/hebergements/4_small/bleuetblancS.jpg" class="imgpop"
+                                alt="Image Hôtel Bleu et Blanc">
+                            <div class="txtpop">
+                                <h3>Hôtel Tout bleu et Blanc</h3>
+                                <p>Nuit à partir de 68€</p>
+                                <div class="etoile">
+                                    <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                        class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                        class="fas fa-star gris"></i>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </li>
                 </ul>
             </article>
@@ -207,29 +227,42 @@
             <h2 class="titreactivite">Activités à Marseille</h2>
             <ul class="active">
                 <li class="activ">
-                    <img src="Assets/Images/activites/4_small/vieuxport.jpg" class="imgactiv" alt="Image Vieux Port">
-                    <p class="soutitre">Vieux Port</p>
+                    <a href="" class="bigactiv">
+                        <img src="Assets/Images/activites/4_small/vieuxport.jpg" class="imgactiv"
+                            alt="Image Vieux Port">
+                        <p class="soutitre">Vieux Port</p>
+                    </a>
                 </li>
                 <li class="activ">
-                    <img src="Assets/Images/activites/4_small/pomegues.jpg" class="imgactiv2" id="imga2"
-                        alt="Image du Fort de Pomegues">
-                    <p class="soutitre">Fort de Pomègues</p>
-                    <img src="Assets/Images/activites/4_small/frioul.jpg" class="imgactiv2" id="imga3"
-                        alt="Image de l'Îles du Frioul ">
-                    <p class="soutitre">Îles du Frioul</p>
+                    <a href="" class="smallactiv">
+                        <img src="Assets/Images/activites/4_small/pomegues.jpg" class="imgactiv2" id="imga2"
+                            alt="Image du Fort de Pomegues">
+                        <p class="soutitre">Fort de Pomègues</p>
+                    </a>
+                    <a href="" class="smallactiv">
+                        <img src="Assets/Images/activites/4_small/frioul.jpg" class="imgactiv2" id="imga3"
+                            alt="Image de l'Îles du Frioul ">
+                        <p class="soutitre">Îles du Frioul</p>
+                    </a>
                 </li>
                 <li class="activ">
-                    <img src="Assets/Images/activites/4_small/calanques.jpg" class="imgactiv"
-                        alt="Image du Parc National des Calanques">
-                    <p class="soutitre">Parc National des Calanques</p>
+                    <a href="" class="bigactiv">
+                        <img src="Assets/Images/activites/4_small/calanques.jpg" class="imgactiv"
+                            alt="Image du Parc National des Calanques">
+                        <p class="soutitre">Parc National des Calanques</p>
+                    </a>
                 </li>
                 <li class="activ">
-                    <img src="Assets/Images/activites/4_small/damedelagarde.jpg" class="imgactiv2" id="imga5"
-                        alt="Image de Notre dame de la Garde">
-                    <p class="soutitre">Notre-Dame-de-la-Garde</p>
-                    <img src="Assets/Images/activites/4_small/longchamp.jpg" class="imgactiv2" id="imga6"
-                        alt="Image du Parc Longchamp">
-                    <p class="soutitre">Parc Longchamp</p>
+                    <a href="" class="smallactiv">
+                        <img src="Assets/Images/activites/4_small/damedelagarde.jpg" class="imgactiv2" id="imga5"
+                            alt="Image de Notre dame de la Garde">
+                        <p class="soutitre">Notre-Dame-de-la-Garde</p>
+                    </a>
+                    <a href="" class="smallactiv">
+                        <img src="Assets/Images/activites/4_small/longchamp.jpg" class="imgactiv2" id="imga6"
+                            alt="Image du Parc Longchamp">
+                        <p class="soutitre">Parc Longchamp</p>
+                    </a>
                 </li>
             </ul>
         </section>
