--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
     <!-- Le lien pour les FA icone -->
     <script src="https://kit.fontawesome.com/0b5afe6080.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" type="image/png" href="/Assets/Images/logo/r.png">
+    <link rel="shortcut icon" type="image/png" href="Assets/Images/logo/r.png">
     <title>Reservia</title>
 </head>
 
 <body>
     <header>
-        <a href="index.html"><img src="/Assets/Images/logo/reservia.png" id="logo" alt="Logo"></a>
+        <a href="index.html"><img src="Assets/Images/logo/reservia.png" id="logo" alt="Logo"></a>
         <nav>
             <ul>
                 <li class="h">
@@ -80,7 +80,7 @@
                 <ul class="liste" id="hebergement">
                     <li class="heberg">
                         <a href="#" class="lienheberg">
-                            <img src="/Assets/Images/hebergements/4_small/cannebiereS.jpg" class="imgheberg"
+                            <img src="Assets/Images/hebergements/4_small/cannebiereS.jpg" class="imgheberg"
                                 alt="Image Auberge Cannebiere">
                             <div class="txtheber">
                                 <h3>Auberge La Cannebière</h3>
@@ -95,7 +95,7 @@
                     </li>
                     <li class="heberg">
                         <a href="#" class="lienheberg">
-                            <img src="/Assets/Images/hebergements/4_small/portS.jpg" class="imgheberg"
+                            <img src="Assets/Images/hebergements/4_small/portS.jpg" class="imgheberg"
                                 alt="Image Hôtel Port">
                             <div class="txtheber">
                                 <h3>Hôtel du port</h3>
@@ -110,7 +110,7 @@
                     </li>
                     <li class="heberg">
                         <a href="#" class="lienheberg">
-                            <img src="/Assets/Images/hebergements/4_small/mouetteS.jpg" class="imgheberg"
+                            <img src="Assets/Images/hebergements/4_small/mouetteS.jpg" class="imgheberg"
                                 alt="Image Hôtel Mouettes">
                             <div class="txtheber">
                                 <h3>Hôtel Les mouettes</h3>
@@ -125,7 +125,7 @@
                     </li>
                     <li class="heberg">
                         <a href="#" class="lienheberg">
-                            <img src="/Assets/Images/hebergements/4_small/merS.jpg" class="imgheberg"
+                            <img src="Assets/Images/hebergements/4_small/merS.jpg" class="imgheberg"
                                 alt="Image Hôtel Mer">
                             <div class="txtheber">
                                 <h3>Hôtel de la mer</h3>
@@ -140,7 +140,7 @@
                     </li>
                     <li class="heberg">
                         <a href="#" class="lienheberg">
-                            <img src="/Assets/Images/hebergements/4_small/panierS.jpg" class="imgheberg"
+                            <img src="Assets/Images/hebergements/4_small/panierS.jpg" class="imgheberg"
                                 alt="Image Auberge Panier">
                             <div class="txtheber">
                                 <h3>Auberge Le Panier</h3>
@@ -155,7 +155,7 @@
                     </li>
                     <li class="heberg">
                         <a href="#" class="lienheberg">
-                            <img src="/Assets/Images/hebergements/4_small/aminaS.jpg" class="imgheberg"
+                            <img src="Assets/Images/hebergements/4_small/aminaS.jpg" class="imgheberg"
                                 alt="Image Hôtel Amina">
                             <div class="txtheber">
                                 <h3>Hôtel chez Amina</h3>
@@ -179,7 +179,7 @@
                 <ul class="liste" id="populaire">
                     <li class="pop">
                         <a href="#" class="lienpop">
-                            <img src="/Assets/Images/hebergements/4_small/soleildumatinS.jpg" class="imgpop"
+                            <img src="Assets/Images/hebergements/4_small/soleildumatinS.jpg" class="imgpop"
                                 alt="Image Hôtel Soleil Matin">
                             <div class="txtpop">
                                 <h3>Hôtel Le soleil du matin</h3>
@@ -194,7 +194,7 @@
                     </li>
                     <li class="pop">
                         <a href="#" class="lienpop">
-                            <img src="/Assets/Images/hebergements/4_small/coeurdeleauS.jpg" class="imgpop"
+                            <img src="Assets/Images/hebergements/4_small/coeurdeleauS.jpg" class="imgpop"
                                 alt="Image Coeur de l'eau Chambre d'hôtes">
                             <div class="txtpop">
                                 <h3>Au coeur de l'eau Chambres d'hôtes</h3>
@@ -209,7 +209,7 @@
                     </li>
                     <li class="pop">
                         <a href="#" class="lienpop">
-                            <img src="/Assets/Images/hebergements/4_small/bleuetblancS.jpg" class="imgpop"
+                            <img src="Assets/Images/hebergements/4_small/bleuetblancS.jpg" class="imgpop"
                                 alt="Image Hôtel Bleu et Blanc">
                             <div class="txtpop">
                                 <h3>Hôtel Tout bleu et Blanc</h3>
@@ -230,38 +230,38 @@
             <ul class="active">
                 <li class="activ">
                     <a href="#" class="bigactiv">
-                        <img src="/Assets/Images/activites/4_small/vieuxport.jpg" class="imgactiv"
+                        <img src="Assets/Images/activites/4_small/vieuxport.jpg" class="imgactiv"
                             alt="Image Vieux Port">
                         <p class="soutitre">Vieux Port</p>
                     </a>
                 </li>
                 <li class="activ">
                     <a href="#" class="smallactiv">
-                        <img src="/Assets/Images/activites/4_small/pomegues.jpg" class="imgactiv2" id="imga2"
+                        <img src="Assets/Images/activites/4_small/pomegues.jpg" class="imgactiv2" id="imga2"
                             alt="Image du Fort de Pomegues">
                         <p class="soutitre">Fort de Pomègues</p>
                     </a>
                     <a href="#" class="smallactiv">
-                        <img src="/Assets/Images/activites/4_small/frioul.jpg" class="imgactiv2" id="imga3"
+                        <img src="Assets/Images/activites/4_small/frioul.jpg" class="imgactiv2" id="imga3"
                             alt="Image de l'Îles du Frioul ">
                         <p class="soutitre">Îles du Frioul</p>
                     </a>
                 </li>
                 <li class="activ">
                     <a href="#" class="bigactiv">
-                        <img src="/Assets/Images/activites/4_small/calanques.jpg" class="imgactiv"
+                        <img src="Assets/Images/activites/4_small/calanques.jpg" class="imgactiv"
                             alt="Image du Parc National des Calanques">
                         <p class="soutitre">Parc National des Calanques</p>
                     </a>
                 </li>
                 <li class="activ">
                     <a href="#" class="smallactiv">
-                        <img src="/Assets/Images/activites/4_small/damedelagarde.jpg" class="imgactiv2" id="imga5"
+                        <img src="Assets/Images/activites/4_small/damedelagarde.jpg" class="imgactiv2" id="imga5"
                             alt="Image de Notre dame de la Garde">
                         <p class="soutitre">Notre-Dame-de-la-Garde</p>
                     </a>
                     <a href="#" class="smallactiv">
-                        <img src="/Assets/Images/activites/4_small/longchamp.jpg" class="imgactiv2" id="imga6"
+                        <img src="Assets/Images/activites/4_small/longchamp.jpg" class="imgactiv2" id="imga6"
                             alt="Image du Parc Longchamp">
                         <p class="soutitre">Parc Longchamp</p>
                     </a>
